--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_colorpicker: ^1.0.3
+  window_manager: ^0.3.7
   adaptive_navigation: ^0.0.4
   go_router: ^10.1.0
   provider: 6.0.5
