路由生命周期状态

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_colorpicker: ^1.0.3
 #  window_manager: ^0.3.7
   adaptive_navigation: ^0.0.4
@@ -43,8 +45,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  toly_menu:
-    path: E:\Projects\Flutter\packages\toly_menu
+#  toly_menu:
+#    path: E:\Projects\Flutter\packages\toly_menu
 
 dev_dependencies:
   flutter_test:
