--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,7 @@ dependencies:
   window_manager: ^0.3.7
   cupertino_icons: ^1.0.2
   go_router: ^12.1.1
-  toly_menu:
-    path: E:\Projects\Flutter\packages\toly_menu
-#  toly_menu: ^0.0.2
+  toly_menu: ^0.0.3
   idraw:
     path: packages/idraw
   components:
