--- a/packages/idraw/pubspec.yaml
+++ b/packages/idraw/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   image: ^4.1.3
+  dio: ^5.4.0
   components:
     path: ../components
 dev_dependencies:
