--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/palettes.json
     - assets/draw/p01/
     - assets/draw/p02/
     - assets/draw/p03/
