--- a/packages/idraw/pubspec.yaml
+++ b/packages/idraw/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   image: ^4.1.3
   dio: ^5.4.0
+  dash_painter: ^1.0.2
   components:
     path: ../components
 dev_dependencies:
